# blinddateai

./: .gitignore  README.md  docker-compose.yml
agentcore/: pyproject.toml  requirements.txt
backend/: alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agents/: chat_facilitator.py  compatibility_scorer.py  onboarding_agent.py
backend/app/api/: auth.py  chat.py  deps.py  matching.py  onboarding.py
backend/app/models/: __init__.py  match.py  message.py  profile.py  schemas.py  user.py
backend/app/services/: llm_service.py  matching_engine.py
mobile/: App.tsx  app.json  package-lock.json  package.json
mobile/assets/: .gitkeep
mobile/src/components/: ChatBubble.tsx  CompatibilityMeter.tsx  ProfileCard.tsx
mobile/src/config/: index.ts
mobile/src/screens/: AuthScreen.tsx  BlindChatScreen.tsx  OnboardingChatScreen.tsx  ProfileRevealScreen.tsx  WaitingScreen.tsx
mobile/src/services/: api.ts  mockApi.ts  websocket.ts
mobile/src/stores/: userStore.ts
mobile/src/types/: index.ts
