[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blinddate-agentcore"
version = "1.0.0"
description = "BlindDate AI Agents for AWS Bedrock AgentCore"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bedrock-agentcore-starter-toolkit>=0.1.0",
    "bedrock-agentcore-sdk>=0.1.0",
    "strands-agents>=0.1.0",
    "boto3>=1.34.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "tools*", "config*"]
